# dig-coinstore

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.cursor/: mcp.json
.github/workflows/: ci.yml  publish.yml
.repomix/: pack-src.xml
benches/: coinstate_bench.rs
docs/prompt/: chat.md  prompt.md  start.md
docs/prompt/tools/: README.md  gitnexus.md  repomix.md  socraticode.md
docs/prompt/tree/: README.md  dt-authoritative-sources.md  dt-git.md  dt-hard-rules.md  dt-paths.md  dt-role.md  dt-tools.md  dt-wf-commit.md  dt-wf-gather-context.md  dt-wf-implement.md  dt-wf-select.md  dt-wf-test.md  dt-wf-update-tracking.md  dt-wf-validate.md
docs/requirements/: IMPLEMENTATION_ORDER.md  README.md  REQUIREMENTS_REGISTRY.yaml  SCHEMA.md
docs/requirements/domains/block_application/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/block_application/specs/: BLK-001.md  BLK-002.md  BLK-003.md  BLK-004.md  BLK-005.md  BLK-006.md  BLK-007.md  BLK-008.md  BLK-009.md  BLK-010.md  BLK-011.md  BLK-012.md  BLK-013.md  BLK-014.md
docs/requirements/domains/concurrency/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/concurrency/specs/: CON-001.md  CON-002.md  CON-003.md  CON-004.md
docs/requirements/domains/crate_api/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_api/specs/: API-001.md  API-002.md  API-003.md  API-004.md  API-005.md  API-006.md  API-007.md  API-008.md  API-009.md  API-010.md
docs/requirements/domains/crate_structure/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/crate_structure/specs/: STR-001.md  STR-002.md  STR-003.md  STR-004.md  STR-005.md  STR-006.md
docs/requirements/domains/hints/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/hints/specs/: HNT-001.md  HNT-002.md  HNT-003.md  HNT-004.md  HNT-005.md  HNT-006.md
docs/requirements/domains/merkle/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/merkle/specs/: MRK-001.md  MRK-002.md  MRK-003.md  MRK-004.md  MRK-005.md  MRK-006.md
docs/requirements/domains/performance/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/performance/specs/: PRF-001.md  PRF-002.md  PRF-003.md  PRF-004.md  PRF-005.md  PRF-006.md  PRF-007.md  PRF-008.md  PRF-009.md
docs/requirements/domains/queries/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/rollback/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/requirements/domains/storage/: NORMATIVE.md  TRACKING.yaml  VERIFICATION.md
docs/resources/: SPEC.md
src/: archive.rs  block_apply.rs  coin_store.rs  config.rs  error.rs  hints.rs  lib.rs  queries.rs  rollback.rs  types.rs
src/cache/: counters.rs  lru_cache.rs  mod.rs  unspent_set.rs
src/merkle/: leaf_hash.rs  mod.rs  persistent.rs  proof.rs
src/storage/: kv_bincode.rs  lmdb.rs  mod.rs  rocksdb.rs  schema.rs
tests/: api_001_tests.rs  api_002_tests.rs  api_003_tests.rs  api_004_tests.rs  api_005_tests.rs  api_006_tests.rs  api_007_tests.rs  api_008_tests.rs  api_009_tests.rs  api_010_tests.rs  blk_001_tests.rs  blk_002_tests.rs  blk_003_tests.rs  blk_004_tests.rs  blk_005_tests.rs  blk_006_tests.rs  blk_007_tests.rs  blk_008_tests.rs  blk_009_tests.rs  blk_010_tests.rs  blk_011_tests.rs  blk_012_tests.rs  blk_013_tests.rs  blk_014_tests.rs  con_001_tests.rs  con_002_tests.rs  con_003_tests.rs  con_004_tests.rs  hnt_001_tests.rs  hnt_002_tests.rs  hnt_003_tests.rs  hnt_004_tests.rs  hnt_005_tests.rs  hnt_006_tests.rs  mrk_001_tests.rs  mrk_002_tests.rs  mrk_003_tests.rs  mrk_004_tests.rs  mrk_005_tests.rs  mrk_006_tests.rs  (+38 more)
tests/helpers/: mod.rs
(+26 files in other folders)
